--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,10 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+$background-color: linear-gradient(259.93deg, #000000 -41.68%, #00171f 146.85%);
+$primary-text-color: #ffffff;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -28,6 +22,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: "Archivo", sans-serif;
+  background: $background-color;
+  color: $primary-text-color;
 }
 
 h1 {
