--- a/src/components/CustomButton.scss
+++ b/src/components/CustomButton.scss
@@ -1,7 +1,7 @@
 .custom-button-container {
     padding: 10px;
     border-radius: 5px;
-    background: linear-gradient(262.71deg, #00d1ff -30.04%, #00ffa3 124.74%);
+    background: linear-gradient(262.71deg, #00d1ff -30.04%, #6600ff 124.74%);
     display: flex;
     align-items: center;
     justify-content: center;
