style: modified CustomButton and Sidebar file

--- a/src/components/CustomButton.scss
+++ b/src/components/CustomButton.scss
@@ -1,10 +1,11 @@
 .custom-button-container {
-    padding: 10px;
-    border-radius: 5px;
-    background: linear-gradient(262.71deg, #00d1ff -30.04%, #00ffa3 124.74%);
+    padding: 8px;
+    border-radius: 20px;
+    background: #653fff;
     display: flex;
     align-items: center;
     justify-content: center;
+    color: white;
 }
 
 .custom-button-container:hover {
