--- a/src/pages/Login.scss
+++ b/src/pages/Login.scss
@@ -6,7 +6,8 @@
     align-items: center;
 
     .button-container {
-        width: 405.76px;
+        width: 300px;
         color: black;
+        margin-top: 10px;
     }
 }
