--- a/src/components/Tasks.scss
+++ b/src/components/Tasks.scss
@@ -47,7 +47,7 @@
 
         /* Handle */
         ::-webkit-scrollbar-thumb {
-            background: linear-gradient(262.71deg, #00d1ff -30.04%, #00ffa3 124.74%);
+            background: #653fff;
         }
 
         /* Handle on hover */
