--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -7,7 +7,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between; // Move para antes do @media
+    justify-content: space-between;
 
     .logo img {
         height: 42px;
